2014-03-17  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (sighand_loading_stop): New function.
	(loading_handler_start): Add SIGTERM handler for loading handler child
	process. This ensures the loading handler isn't abruptly terminated by
	the parent while responding to a client.

2014-03-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/greenbone-nvt-sync (update_openvassd, update_openvasmd): Add
	PID to log and unify log message in error case.

2014-03-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Removed outdated and unmaintained documentation remains.

	* doc/kb_entries.txt: Removed. This is an outdated list and unmaintained
	since ages. The NVTs as such are the primary source on what KB entries
	are set.

	* doc/nsr_file_format.txt: Removed. Outdated and unmaintained.

	* doc/nbe_file_format.txt: Removed. Outdated and unmaintained.

2014-03-17  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (comm_loading): Receive all lines sent by client before
	closing the connection.

2014-03-17  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Handle OTP version 2.0 only. Handle NVT_INFO OTP client command.

	* src/comm.c (comm_init): Only handle OTP version 2.0. Return 0 on
	success.

	* src/ntp.c (ntp_parse_input): Handle NVT_INFO client request. Remove
	useless code.

	* src/openvassd.c (handle_client): Remove protocol_version argument and
	related code.
	(scanner_thread): Adjust comm_init() and handle_client() calls.

	* src/otp.c (otp_get_client_request): Handle CREQ_NVT_INFO case.

	* src/otp.h (client_request_t): Add CREQ_NVT_INFO value.

2014-03-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Resolve need for misc/otp.h.

	* src/comm.c (comm_loading): Use the keyword "SCANNER_LOADING"
	directly.
	(comm_init): Use a integer directly for the OTP version.

	* src/openvassd.c (handle_client): Use a integer directly for
	OTP version.
